@@ -1,5 +1,6 @@
 2002-01-27  Willem Jan Palenstijn <wjpalenstijn@users.sourceforge.net>
 	* tools/wuc.c, rip.c: minor bugfixes
+	* tools/rip.c: use .uco extension for extracted objects
 
 2002-01-26  Jeff Freedman  <jeff@amy.nerble.net>
 
